--- a/testbeds/princeton/roles/proxmox/templates/interfaces_static.j2
+++ b/testbeds/princeton/roles/proxmox/templates/interfaces_static.j2
@@ -5,15 +5,15 @@ auto lo
 iface lo inet loopback
 
 # The primary network interface
-auto {{ proxmox_interface }}
-iface {{ proxmox_interface }} inet static
-	address {{ proxmox_address }}
-	netmask {{ proxmox_netmask }}
-	network {{ proxmox_network }}
-	broadcast {{ proxmox_broadcast }}
-	gateway {{ proxmox_gateway }}
-	dns-nameservers {{ proxmox_dns_nameservers }}
-	dns-search {{ proxmox_dns_search }}
+auto {{ proxmox_vm_network_interface }}
+iface {{ proxmox_vm_network_interface }} inet static
+	address {{ proxmox_vm_network_address_prefix }}{{ proxmox_vm_vmid }}
+	netmask {{ proxmox_vm_network_netmask }}
+	network {{ proxmox_vm_network_network }}
+	broadcast {{ proxmox_vm_network_broadcast }}
+	gateway {{ proxmox_vm_network_gateway }}
+	dns-nameservers {{ proxmox_vm_dns_nameservers }}
+	dns-search {{ proxmox_vm_dns_search }}
 
 
 
