--- a/testbeds/princeton/roles/proxmox/templates/interfaces_static.j2
+++ b/testbeds/princeton/roles/proxmox/templates/interfaces_static.j2
@@ -7,11 +7,11 @@ iface lo inet loopback
 # The primary network interface
 auto {{ proxmox_vm_network_interface }}
 iface {{ proxmox_vm_network_interface }} inet static
-	address {{ proxmox_vm_network_address_prefix }}{{ proxmox_vm_id }}
+	address {{ proxmox_vm_network_address_prefix }}{{ proxmox_pve_id }}.{{ proxmox_vm_id }}
 	netmask {{ proxmox_vm_network_netmask }}
-	network {{ proxmox_vm_network_network }}
-	broadcast {{ proxmox_vm_network_broadcast }}
-	gateway {{ proxmox_vm_network_gateway }}
+	network {{ proxmox_vm_network_address_prefix }}{{ proxmox_pve_id }}.{{ proxmox_vm_network_network_postfix }}
+	broadcast {{ proxmox_vm_network_address_prefix }}{{ proxmox_pve_id }}.{{ proxmox_vm_network_broadcast_postfix }}
+	gateway {{ proxmox_vm_network_address_prefix }}{{ proxmox_pve_id }}.{{ proxmox_vm_network_gateway_postfix }}
 	dns-nameservers {{ proxmox_vm_dns_nameservers }}
 	dns-search {{ proxmox_vm_dns_search }}
 
