--- a/testbeds/vmware/roles/proxmox/templates/interfaces_static.j2
+++ b/testbeds/vmware/roles/proxmox/templates/interfaces_static.j2
@@ -13,5 +13,5 @@ iface {{ proxmox_vm_network_interface }} inet static
 	broadcast {{ proxmox_vm_network_address_prefix }}{{ proxmox_prme_id }}.{{ proxmox_vm_network_broadcast_postfix }}
 	gateway {{ proxmox_vm_network_address_prefix }}{{ proxmox_prme_id }}.{{ proxmox_vm_network_gateway_postfix }}
 	dns-nameservers {{ proxmox_vm_dns_nameservers }}
-#	dns-search {{ proxmox_vm_dns_search }}
+	dns-search {{ proxmox_vm_dns_search }}
 	mtu {{ proxmox_vm_network_interface_mtu_size }}
