--- a/benchmarks/vmware/pubsub/roles/zeromq_vms/templates/log_radio_stats.sh.j2
+++ b/benchmarks/vmware/pubsub/roles/zeromq_vms/templates/log_radio_stats.sh.j2
@@ -2,7 +2,7 @@
 
 cd /tmp
 
-rm -f "radio_stats_with__subs_2x{{ sub_count_per_node }}__cmd_{{ pub_cmds }}.log"
+#rm -f "radio_stats_with__subs_2x{{ sub_count_per_node }}__cmd_{{ pub_cmds }}.log"
 
 radio_pid=$(pidof radio)
 
