--- a/benchmarks/vmware/pubsub/roles/zeromq_vms/templates/log_kvm_stats.sh.j2
+++ b/benchmarks/vmware/pubsub/roles/zeromq_vms/templates/log_kvm_stats.sh.j2
@@ -2,7 +2,7 @@
 
 cd /tmp
 
-rm -f "kvm_stats_with__subs_2x{{ sub_count_per_node }}__cmd_{{ pub_cmds }}.log"
+#rm -f "kvm_stats_with__subs_2x{{ sub_count_per_node }}__cmd_{{ pub_cmds }}.log"
 
 kvm_pid=$(qm list | grep {{ inventory_hostname }} | awk '{print $6}')
 
