--- a/apps/vmware/roles/zeromq_vms/templates/log_radio_stats.sh.j2
+++ b/apps/vmware/roles/zeromq_vms/templates/log_radio_stats.sh.j2
@@ -2,11 +2,11 @@
 
 cd /tmp
 
-#rm -f "radio_stats_with__subs_{{ sub_count_per_node }}__cmd_{{ pub_cmds }}.{{ fanout_pub_scheme.type }}.log"
+#rm -f "radio_stats_with__subs_1+{{ sub_count_per_node }}__cmd_{{ pub_cmds }}.{{ fanout_pub_scheme.type }}.log"
 
 radio_pid=$(pidof radio)
 
 while true
 do
-    top -b -n2 -p $radio_pid | grep radio | tail -n1 | awk '{print $9, $10}' >> "radio_stats_with__subs_{{ sub_count_per_node }}__cmd_{{ pub_cmds }}.{{ fanout_pub_scheme.type }}.log";
+    top -b -n2 -p $radio_pid | grep radio | tail -n1 | awk '{print $9, $10}' >> "radio_stats_with__subs_1+{{ sub_count_per_node }}__cmd_{{ pub_cmds }}.{{ fanout_pub_scheme.type }}.log";
 done
